--- a/public/app.css
+++ b/public/app.css
@@ -71,17 +71,18 @@ a:link {
   bottom: 20px;
   left: 20px;
 
-  padding: 0;
+  padding: 1;
   margin: 0;
   list-style: none;
 }
+
 
 .buttons > li {
   display: inline-block;
   margin-right: 10px;
 }
 .buttons > li > a {
-  background: ##fafafa;
+  background: red; /*#fafafa;*/
   border: solid 1px #cccccc;
   display: inline-block;
   padding: 5px;
